# nuevo-etl

./: .env.example  .gitignore  Procfile  Procfile.webhook  README.md  nixpacks.toml  pyproject.toml  railway-backfill.json  railway-cron.json  railway-weekly.json  railway.json  requirements.lock.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py  helpers.py
alembic/versions/: .gitkeep  001_initial_schema.py  002_source_documents_and_checkpoints.py  003_invoice_numbering.py  004_webhook_changes.py  005_backfill_integrity.py  006_backfill_evidence.py
src/alegra_etl/: __init__.py  __main__.py  cli.py  config.py  logging.py
src/alegra_etl/alegra/: __init__.py  client.py  parsers.py  rate_limiter.py  resources.py
src/alegra_etl/db/: __init__.py  session.py
src/alegra_etl/marts/: __init__.py  builder.py
src/alegra_etl/pipeline/: __init__.py  advisory_lock.py  backfill_work.py  backfill_worker.py  checkpoint.py  checkpoint_integrity.py  completion_gate.py  concurrent_fetch.py  extractor.py  loader.py  payload_diff.py  reconciler.py  replay_source.py  resource_coverage.py  runner.py  source_loader.py  typed_loader.py  webhook_processor.py
src/alegra_etl/quality/: __init__.py  checks.py
src/alegra_etl/web/: __init__.py  (+1 more)
tests/: conftest.py
tests/integration/: test_checkpoint.py  test_loader.py  test_source_documents.py
tests/unit/: test_backfill_work_evidence.py  test_checkpoint_advance.py  test_checkpoint_integrity.py  test_client.py  test_completion_gate.py  test_concurrent_fetch.py  test_concurrent_fetch_no_metadata.py  test_config.py  test_logging.py  test_metrics.py  test_parsers.py  test_resource_capabilities.py  test_resources.py  test_source_id.py  test_transform_resilient.py  test_webhook_auth.py  test_webhook_processor.py
(+8 files in other folders)
