[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alegra-etl"
version = "1.0.0"
description = "ETL productivo de Alegra hacia PostgreSQL con webhooks, reconciliación y marts retail"
readme = { text = "ETL productivo de Alegra hacia PostgreSQL.", content-type = "text/markdown" }
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "jupabego97" }]
dependencies = [
    "alembic>=1.14.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "orjson>=3.10.0",
    "psycopg[binary,pool]>=3.2.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.36",
    "tenacity>=9.0.0",
    "typer>=0.15.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-httpx>=0.35.0",
    "ruff>=0.8.0",
    "testcontainers[postgres]>=4.9.0",
]

[project.scripts]
alegra-etl = "alegra_etl.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/alegra_etl"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "SIM105", "UP042", "SIM118"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
packages = ["alegra_etl"]

[tool.coverage.run]
source = ["alegra_etl"]
omit = ["tests/*"]
